<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="85dp"
        android:layout_height="160dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/redSideBut"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/redSide"
            app:srcCompat="@drawable/red_side"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="152dp" />

        <ImageButton
            android:id="@+id/blueSideBut"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/blueSide"
            app:srcCompat="@drawable/blue_side"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="77dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="85dp"
        android:layout_height="160dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/whiteSideBut"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/whiteSide"
            app:srcCompat="@drawable/white_side"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="1dp" />

        <ImageButton
            android:id="@+id/orangeSideBut"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/orangeSide"
            app:srcCompat="@drawable/orange_side"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="417dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="85dp"
        android:layout_height="160dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996">

        <ImageButton
            android:id="@+id/greenSideBut"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/greenSide"
            app:srcCompat="@drawable/green_side"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp" />

        <ImageButton
            android:id="@+id/yellowSideBut"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/yellowSide"
            app:srcCompat="@drawable/yellow_side"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="1dp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/startProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/startSolve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.598"
        app:srcCompat="@drawable/lb_ic_guidedactions_item_chevron" />

    <ImageButton
        android:id="@+id/homeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/homeInfo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/ic_notifications_black_24dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="224dp"
        android:layout_height="52dp"
        android:layout_marginTop="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.025" />

</androidx.constraintlayout.widget.ConstraintLayout>